force-app/main/default/objects/numm__Solde__c/numm__Solde__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Solde</label>
</CustomObject>