force-app/main/default/objects/numm__Solde__c/fields/numm__DateOperation__c.field-meta.xml
<CustomField>
    <fullName>numm__DateOperation__c</fullName>
    <label>Date Operation</label>
    <type>Date</type>
</CustomField>