force-app/main/default/objects/numm__Solde__c/listViews/numm__Details.listView-meta.xml
<ListView>
    <fullName>numm__Details</fullName>
    <columns>NAME</columns>
    <columns>numm__Solde__c</columns>
    <columns>numm__DateValeur__c</columns>
    <columns>numm__DateOperation__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
    <language>fr</language>
</ListView>